--- a/listausuarios.html
+++ b/listausuarios.html
@@ -36,8 +36,10 @@
                     <td class="py-2 px-4 border"><span
                             class="bg-green-100 text-green-800 px-2 py-1 rounded text-sm">Activo</span></td>
                     <td class="py-2 px-4 border text-center">
+
                         <button class="text-blue-600 mr-2">Modificar</button>
-                        <button class="text-red-600">Revocar</button>
+                        <a class="text-red-600" href="eliminaracceso.html" class="">Revocar</a>
+      
                     </td>
                 </tr>
             </tbody>
