--- a/regnuevopersonal.html
+++ b/regnuevopersonal.html
@@ -49,7 +49,7 @@
             </div>
 
             <div class="flex justify-end space-x-4">
-                <a href="dashboard.html" class="bg-gray-400 text-white px-6 py-2 rounded">Cancelar</a>
+                <a href="listausuarios.html" class="bg-gray-400 text-white px-6 py-2 rounded">Cancelar</a>
                 <button type="submit" class="bg-blue-700 text-white px-6 py-2 rounded">Guardar</button>
             </div>
         </form>
